--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telemedicine demo",
+  "name": "telemedicine-demo",
   "version": "0.2.0",
   "private": true,
   "publishConfig": { "registry": "https://npm.pkg.github.com/" },
