--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "telemedicine-demo",
-  "version": "0.2.0",
+  "name": "telemed-poc",
+  "version": "0.2.11",
   "private": true,
   "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "dependencies": {
